--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-5">
+    <img src="/images/Audi_Suv_Black.jpg" width="100%" height="auto" /><br/><br/>
     <h1>Service Offering</h1>
    <p>- All Cars Safety Certified</p>
     <p>- Better Pricing Than Dealers</p>
